Sequenced Collection
Fix BatchLSEstimatorTest after SequencedCollection migration

The migration to SequencedCollection (commit 1ac8c31ab) replaced
list.get(0) with list.getFirst(), which throws NoSuchElementException
on an empty list rather than IndexOutOfBoundsException. Update the
testErrorThrownWhenNoEnabledMeasurements expectation accordingly.