@@ -725,7 +725,7 @@ public abstract class AbstractOrbitDetermination<T extends PropagatorBuilder> {
         // We want to test with all propagations in the same direction.
         // Propagate to just before first measurement.
         SpacecraftState initialState = propagatorBuilder.buildPropagator()
-                .propagate(multiplexed.get(0).getDate().shiftedBy(-10.0 * 60.0));
+                .propagate(multiplexed.getFirst().getDate().shiftedBy(-10.0 * 60.0));
         propagatorBuilder.resetOrbit(initialState.getOrbit());
 
         // Ensure all measurements are in time-order
@@ -873,7 +873,7 @@ public abstract class AbstractOrbitDetermination<T extends PropagatorBuilder> {
                                 rangeLog.createStatisticsSummary(),  rangeRateLog.createStatisticsSummary(),
                                 azimuthLog.createStatisticsSummary(),  elevationLog.createStatisticsSummary(),
                                 positionLog.createStatisticsSummary(),  velocityLog.createStatisticsSummary(),
-                                covarianceMatrix, smoothedStates.get(0));
+                                covarianceMatrix, smoothedStates.getFirst());
 
     }
 
@@ -1309,7 +1309,7 @@ public abstract class AbstractOrbitDetermination<T extends PropagatorBuilder> {
                                                 new double[] { 1.0 },
                                                 new double[] { transponderDelayBiasMin },
                                                 new double[] { transponderDelayBiasMax });
-            bias.getParametersDrivers().get(0).setSelected(transponderDelayBiasEstimated);
+            bias.getParametersDrivers().getFirst().setSelected(transponderDelayBiasEstimated);
             return bias;
         } else {
             // fixed zero bias, we don't need any modifier
@@ -1521,7 +1521,7 @@ public abstract class AbstractOrbitDetermination<T extends PropagatorBuilder> {
                                        new double[] { rangeSigma },
                                        new double[] { stationRangeBiasMin[i] },
                                        new double[] { stationRangeBiasMax[i] });
-                rangeBias.getParametersDrivers().get(0).setSelected(stationRangeBiasEstimated[i]);
+                rangeBias.getParametersDrivers().getFirst().setSelected(stationRangeBiasEstimated[i]);
             } else {
                 // bias fixed to zero, we don't need to create a modifier for this
                 rangeBias = null;
@@ -1538,7 +1538,7 @@ public abstract class AbstractOrbitDetermination<T extends PropagatorBuilder> {
                                            new double[] {
                                                stationRangeRateBiasMax[i]
                                            });
-                rangeRateBias.getParametersDrivers().get(0).setSelected(stationRangeRateBiasEstimated[i]);
+                rangeRateBias.getParametersDrivers().getFirst().setSelected(stationRangeRateBiasEstimated[i]);
             } else {
                 // bias fixed to zero, we don't need to create a modifier for this
                 rangeRateBias = null;
@@ -1558,7 +1558,7 @@ public abstract class AbstractOrbitDetermination<T extends PropagatorBuilder> {
                                       azELSigma,
                                       new double[] { stationAzimuthBiasMin[i], stationElevationBiasMin[i] },
                                       new double[] { stationAzimuthBiasMax[i], stationElevationBiasMax[i] });
-                azELBias.getParametersDrivers().get(0).setSelected(stationAzElBiasesEstimated[i]);
+                azELBias.getParametersDrivers().getFirst().setSelected(stationAzElBiasesEstimated[i]);
                 azELBias.getParametersDrivers().get(1).setSelected(stationAzElBiasesEstimated[i]);
             } else {
                 // bias fixed to zero, we don't need to create a modifier for this
@@ -1610,7 +1610,7 @@ public abstract class AbstractOrbitDetermination<T extends PropagatorBuilder> {
                         final EstimatedModel modelBefore = new EstimatedModel(new ModifiedSaastamoinenModel(pth0Provider),
                                                                               mappingModel,
                                                                               stationTroposphericZenithDelay[i]);
-                        final ParameterDriver totalDelayBefore = modelBefore.getParametersDrivers().get(0);
+                        final ParameterDriver totalDelayBefore = modelBefore.getParametersDrivers().getFirst();
                         totalDelayBefore.setSelected(stationZenithDelayEstimated[i]);
                         totalDelayBefore.setName(subName + TimeSpanEstimatedModel.DATE_BEFORE + epoch.toString(TimeScalesFactory.getUTC()) + " " + EstimatedModel.TOTAL_ZENITH_DELAY);
 
@@ -1618,7 +1618,7 @@ public abstract class AbstractOrbitDetermination<T extends PropagatorBuilder> {
                         final EstimatedModel modelAfter = new EstimatedModel(new ModifiedSaastamoinenModel(pth0Provider),
                                                                              mappingModel,
                                                                              stationTroposphericZenithDelay[i]);
-                        final ParameterDriver totalDelayAfter = modelAfter.getParametersDrivers().get(0);
+                        final ParameterDriver totalDelayAfter = modelAfter.getParametersDrivers().getFirst();
                         totalDelayAfter.setSelected(stationZenithDelayEstimated[i]);
                         totalDelayAfter.setName(subName + TimeSpanEstimatedModel.DATE_AFTER +
                                                 epoch.toString(TimeScalesFactory.getUTC()) + " " +
@@ -1648,7 +1648,7 @@ public abstract class AbstractOrbitDetermination<T extends PropagatorBuilder> {
 
                         model = new EstimatedModel(new ModifiedSaastamoinenModel(pth0Provider),
                                                    mappingModel, stationTroposphericZenithDelay[i]);
-                        final ParameterDriver driver = model.getParametersDrivers().get(0);
+                        final ParameterDriver driver = model.getParametersDrivers().getFirst();
                         driver.setName(stationNames[i].substring(0, 4) + "/ " + EstimatedModel.TOTAL_ZENITH_DELAY);
                         driver.setSelected(stationZenithDelayEstimated[i]);
 
@@ -1671,7 +1671,7 @@ public abstract class AbstractOrbitDetermination<T extends PropagatorBuilder> {
                     // Estimated ionospheric model
                     final IonosphericMappingFunction mapping = new SingleLayerModelMappingFunction(stationIonosphericHIon[i]);
                     ionosphericModel  = new EstimatedIonosphericModel(body, mapping, stationIonosphericVTEC[i]);
-                    final ParameterDriver  ionosphericDriver = ionosphericModel.getParametersDrivers().get(0);
+                    final ParameterDriver  ionosphericDriver = ionosphericModel.getParametersDrivers().getFirst();
                     ionosphericDriver.setSelected(stationVTECEstimated[i]);
                     ionosphericDriver.setName(stationNames[i].substring(0, 5) + EstimatedIonosphericModel.VERTICAL_TOTAL_ELECTRON_CONTENT);
                 } else {
@@ -2343,11 +2343,11 @@ public abstract class AbstractOrbitDetermination<T extends PropagatorBuilder> {
         independentMeasurements.sort(new ChronologicalComparator());
         List<ObservedMeasurement<?>> clump = new ArrayList<>();
         for (final ObservedMeasurement<?> measurement : independentMeasurements) {
-            if (!clump.isEmpty() && measurement.getDate().durationFrom(clump.get(0).getDate()) > tol) {
+            if (!clump.isEmpty() && measurement.getDate().durationFrom(clump.getFirst().getDate()) > tol) {
 
                 // previous clump is finished
                 if (clump.size() == 1) {
-                    multiplexed.add(clump.get(0));
+                    multiplexed.add(clump.getFirst());
                 } else {
                     multiplexed.add(new MultiplexedMeasurement(clump));
                 }
@@ -2360,7 +2360,7 @@ public abstract class AbstractOrbitDetermination<T extends PropagatorBuilder> {
         }
         // final clump is finished
         if (clump.size() == 1) {
-            multiplexed.add(clump.get(0));
+            multiplexed.add(clump.getFirst());
         } else {
             multiplexed.add(new MultiplexedMeasurement(clump));
         }
