@@ -136,7 +136,7 @@ class KalmanModelTest {
 
         // Create one 0m range measurement at t0 + 10s
         final AbsoluteDate date  = date0.shiftedBy(10.);
-        final GroundStation station = context.stations.get(0);
+        final GroundStation station = context.stations.getFirst();
         this.range = new Range(station, true, date, 18616150., 10., 1., sat);
         // Exact range value is 1.8616150246470984E7 m
 
@@ -146,7 +146,7 @@ class KalmanModelTest {
                 new double[]{10.},
                 new double[]{0.},
                 new double[]{100.});
-        this.satRangeBiasDriver = satRangeBias.getParametersDrivers().get(0);
+        this.satRangeBiasDriver = satRangeBias.getParametersDrivers().getFirst();
         satRangeBiasDriver.setSelected(true);
         satRangeBiasDriver.setReferenceDate(date);
         range.addModifier(satRangeBias);
