@@ -154,7 +154,7 @@ public class SemiAnalyticalKalmanEstimatorTest {
                         EstimationTestUtils.createMeasurements(propagator,
                                                                    new TwoWayRangeMeasurementCreator(context),
                                                                    0.0, 6.0, 60.0);
-        final AbsoluteDate lastMeasurementEpoch = measurements.get(measurements.size() - 1).getDate();
+        final AbsoluteDate lastMeasurementEpoch = measurements.getLast().getDate();
 
         // DSST propagator builder (used for orbit determination)
         final DSSTPropagatorBuilder propagatorBuilder = context.createDsst(perfectStart, minStep, maxStep, dP);
@@ -164,7 +164,7 @@ public class SemiAnalyticalKalmanEstimatorTest {
 
         // Reference position/velocity at last measurement date
         final Orbit refOrbit = referencePropagator.
-                        propagate(measurements.get(measurements.size()-1).getDate()).getOrbit();
+                        propagate(measurements.getLast().getDate()).getOrbit();
 
         // Equinictial covariance matrix initialization
         final RealMatrix equinoctialP = MatrixUtils.createRealDiagonalMatrix(new double [] {
@@ -248,7 +248,7 @@ public class SemiAnalyticalKalmanEstimatorTest {
                         EstimationTestUtils.createMeasurements(propagator,
                                                                    new TwoWayRangeMeasurementCreator(context),
                                                                    0.0, 6.0, 60.0);
-        final AbsoluteDate lastMeasurementEpoch = measurements.get(measurements.size() - 1).getDate();
+        final AbsoluteDate lastMeasurementEpoch = measurements.getLast().getDate();
 
         // DSST propagator builder (used for orbit determination)
         final DSSTPropagatorBuilder propagatorBuilder = context.createDsst(perfectStart, minStep, maxStep, dP);
@@ -259,9 +259,9 @@ public class SemiAnalyticalKalmanEstimatorTest {
 
         // Reference position/velocity at last measurement date
         final Orbit refOrbit = referencePropagator.
-                        propagate(measurements.get(measurements.size()-1).getDate()).getOrbit();
+                        propagate(measurements.getLast().getDate()).getOrbit();
 
-        ParameterDriver aDriver = propagatorBuilder.getOrbitalParametersDrivers().getDrivers().get(0);
+        ParameterDriver aDriver = propagatorBuilder.getOrbitalParametersDrivers().getDrivers().getFirst();
         aDriver.setValue(aDriver.getValue() + 1.2);
 
         // Cartesian covariance matrix initialization
@@ -353,7 +353,7 @@ public class SemiAnalyticalKalmanEstimatorTest {
                         EstimationTestUtils.createMeasurements(propagator,
                                                                    new TwoWayRangeMeasurementCreator(context),
                                                                    0.0, 6.0, 60.0);
-        final AbsoluteDate lastMeasurementEpoch = measurements.get(measurements.size() - 1).getDate();
+        final AbsoluteDate lastMeasurementEpoch = measurements.getLast().getDate();
 
         // DSST propagator builder (used for orbit determination)
         final DSSTPropagatorBuilder propagatorBuilder = context.createDsst(perfectStart, minStep, maxStep, dP);
@@ -369,9 +369,9 @@ public class SemiAnalyticalKalmanEstimatorTest {
 
         // Reference position/velocity at last measurement date
         final Orbit refOrbit = referencePropagator.
-                        propagate(measurements.get(measurements.size()-1).getDate()).getOrbit();
+                        propagate(measurements.getLast().getDate()).getOrbit();
 
-        ParameterDriver aDriver = propagatorBuilder.getOrbitalParametersDrivers().getDrivers().get(0);
+        ParameterDriver aDriver = propagatorBuilder.getOrbitalParametersDrivers().getDrivers().getFirst();
         aDriver.setValue(aDriver.getValue() + 1.2);
 
         // Cartesian covariance matrix initialization
@@ -481,7 +481,7 @@ public class SemiAnalyticalKalmanEstimatorTest {
         // Propagator builder for measurement generation
         final DSSTPropagatorBuilder builder = context.createDsst(PropagationType.OSCULATING, PropagationType.MEAN, perfectStart, minStep, maxStep, dP);
         final DSSTForceModel zonal = new DSSTZonal(GravityFieldFactory.getUnnormalizedProvider(2, 0));
-        zonal.getParametersDrivers().get(0).setSelected(true);
+        zonal.getParametersDrivers().getFirst().setSelected(true);
         builder.addForceModel(zonal);
 
         // Create perfect range measurements
@@ -490,7 +490,7 @@ public class SemiAnalyticalKalmanEstimatorTest {
                         EstimationTestUtils.createMeasurements(propagator,
                                                                    new TwoWayRangeMeasurementCreator(context),
                                                                    0.0, 6.0, 60.0);
-        final AbsoluteDate lastMeasurementEpoch = measurements.get(measurements.size() - 1).getDate();
+        final AbsoluteDate lastMeasurementEpoch = measurements.getLast().getDate();
 
         // DSST propagator builder (used for orbit determination)
         final DSSTPropagatorBuilder propagatorBuilder = context.createDsst(perfectStart, minStep, maxStep, dP);
@@ -501,7 +501,7 @@ public class SemiAnalyticalKalmanEstimatorTest {
 
         // Reference position/velocity at last measurement date
         final Orbit refOrbit = referencePropagator.
-                        propagate(measurements.get(measurements.size()-1).getDate()).getOrbit();
+                        propagate(measurements.getLast().getDate()).getOrbit();
 
         // Cartesian covariance matrix initialization
         // 100m on position / 1e-2m/s on velocity
@@ -595,7 +595,7 @@ public class SemiAnalyticalKalmanEstimatorTest {
                         EstimationTestUtils.createMeasurements(propagator,
                                                                    new TwoWayRangeMeasurementCreator(context),
                                                                    0.0, 6.0, 60.0);
-        final AbsoluteDate lastMeasurementEpoch = measurements.get(measurements.size() - 1).getDate();
+        final AbsoluteDate lastMeasurementEpoch = measurements.getLast().getDate();
 
         // Create outlier filter
         final DynamicOutlierFilter<Range> filter = new DynamicOutlierFilter<>(10, 1.0);
@@ -613,7 +613,7 @@ public class SemiAnalyticalKalmanEstimatorTest {
 
         // Reference position/velocity at last measurement date
         final Orbit refOrbit = referencePropagator.
-                        propagate(measurements.get(measurements.size()-1).getDate()).getOrbit();
+                        propagate(measurements.getLast().getDate()).getOrbit();
 
         // Cartesian covariance matrix initialization
         // 100m on position / 1e-2m/s on velocity
