@@ -120,15 +120,15 @@ public class OrekitAttitudeEphemerisFileTest {
 
         // Test of all getters for OrekitSatelliteAttitudeEphemeris
         Assertions.assertEquals(satId, satellite.getId());
-        Assertions.assertEquals(0.0, states.get(0).getDate().durationFrom(satellite.getStart()), 1.0e-15);
-        Assertions.assertEquals(0.0, states.get(states.size() - 1).getDate().durationFrom(satellite.getStop()), 1.0e-15);
+        Assertions.assertEquals(0.0, states.getFirst().getDate().durationFrom(satellite.getStart()), 1.0e-15);
+        Assertions.assertEquals(0.0, states.getLast().getDate().durationFrom(satellite.getStop()), 1.0e-15);
 
         // Test of all getters for OrekitAttitudeEphemerisSegment
-        AttitudeEphemerisSegment<TimeStampedAngularCoordinates> segment = satellite.getSegments().get(0);
+        AttitudeEphemerisSegment<TimeStampedAngularCoordinates> segment = satellite.getSegments().getFirst();
         Assertions.assertEquals(OrekitSatelliteAttitudeEphemeris.DEFAULT_INTERPOLATION_METHOD, segment.getInterpolationMethod());
         Assertions.assertEquals(OrekitSatelliteAttitudeEphemeris.DEFAULT_INTERPOLATION_SIZE, segment.getInterpolationSamples());
-        Assertions.assertEquals(0.0, states.get(0).getDate().durationFrom(segment.getStart()), 1.0e-15);
-        Assertions.assertEquals(0.0, states.get(states.size() - 1).getDate().durationFrom(segment.getStop()), 1.0e-15);
+        Assertions.assertEquals(0.0, states.getFirst().getDate().durationFrom(segment.getStart()), 1.0e-15);
+        Assertions.assertEquals(0.0, states.getLast().getDate().durationFrom(segment.getStop()), 1.0e-15);
         Assertions.assertEquals(AngularDerivativesFilter.USE_RR, segment.getAvailableDerivatives());
 
         // Verify attitude
@@ -152,9 +152,9 @@ public class OrekitAttitudeEphemerisFileTest {
                         new ParserBuilder().buildAemParser().parseMessage(new DataSource(tempAem));
         Files.delete(Path.of(tempAem));
 
-        segment = ephemerisFrom.getSatellites().get(satId).getSegments().get(0);
-        Assertions.assertEquals(states.get(0).getDate(), segment.getStart());
-        Assertions.assertEquals(states.get(states.size() - 1).getDate(), segment.getStop());
+        segment = ephemerisFrom.getSatellites().get(satId).getSegments().getFirst();
+        Assertions.assertEquals(states.getFirst().getDate(), segment.getStart());
+        Assertions.assertEquals(states.getLast().getDate(), segment.getStop());
         Assertions.assertEquals(states.size(), segment.getAngularCoordinates().size());
         for (int i = 0; i < states.size(); i++) {
             TimeStampedAngularCoordinates expected = states.get(i).getAttitude().getOrientation();
