@@ -1375,7 +1375,7 @@ class DSSTPropagatorTest {
         dsst = new DSSTPropagator(integrator, PropagationType.MEAN);
         dsst.setInitialState(initialState, PropagationType.MEAN);
         MDot mDot = new MDot();
-        mDot.getParametersDrivers().get(0).setSelected(true);
+        mDot.getParametersDrivers().getFirst().setSelected(true);
         dsst.addForceModel(mDot);
         // an intentionally negligible force model, but with a different parameter
         dsst.addForceModel(new DSSTThirdBody(CelestialBodyFactory.getPluto(), mu));
@@ -1401,7 +1401,7 @@ class DSSTPropagatorTest {
         dsst = new DSSTPropagator(integrator, PropagationType.MEAN);
         dsst.setInitialState(initialState, PropagationType.MEAN);
         mDot = new MDot();
-        mDot.getParametersDrivers().get(0).setSelected(true);
+        mDot.getParametersDrivers().getFirst().setSelected(true);
         dsst.addForceModel(mDot);
         // an intentionally negligible force model, but with a different parameter
         DSSTThirdBody third = new DSSTThirdBody(CelestialBodyFactory.getPluto(), mu);
@@ -1455,7 +1455,7 @@ class DSSTPropagatorTest {
         dsst = new DSSTPropagator(integrator, PropagationType.OSCULATING);
         dsst.setInitialState(initialState, PropagationType.MEAN);
         mDot = new MDot();
-        mDot.getParametersDrivers().get(0).setSelected(true);
+        mDot.getParametersDrivers().getFirst().setSelected(true);
         dsst.addForceModel(mDot);
         // an intentionally negligible force model, but with a different parameter
         dsst.addForceModel(new DSSTThirdBody(CelestialBodyFactory.getPluto(), mu));
@@ -1483,7 +1483,7 @@ class DSSTPropagatorTest {
         dsst = new DSSTPropagator(integrator, PropagationType.OSCULATING);
         dsst.setInitialState(initialState, PropagationType.MEAN);
         mDot = new MDot();
-        mDot.getParametersDrivers().get(0).setSelected(true);
+        mDot.getParametersDrivers().getFirst().setSelected(true);
         dsst.addForceModel(mDot);
         // an intentionally negligible force model, but with a different parameter
         third = new DSSTThirdBody(CelestialBodyFactory.getPluto(), mu);
